Сделал не большой рефакторинг