@@ -2,27 +2,41 @@ package com.iTMS.iTMS.services.impl;
 
 import com.iTMS.iTMS.myDB.models.PLDtasks;
 import com.iTMS.iTMS.myDB.repositories.PLDtasksRepository;
+import com.iTMS.iTMS.repositories.OracleTaskRepository;
 import com.iTMS.iTMS.services.PLDtasksMonitoringService;
+import com.iTMS.iTMS.utilities.Converters;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
+@Slf4j
 public class PLDtasksMonitoringServiceImpl implements PLDtasksMonitoringService {
     @Autowired
     private PLDtasksRepository repository;
+    @Autowired
+    private OracleTaskRepository oracleRepository;
+    @Autowired
+    private Converters converter;
 
     @Override
     public List<PLDtasks> setAllTasks(List<String> list) {
-        List<String> dbListOfTasks = repository.findAll().stream()
-                .map(PLDtasks::getTask)
+        List<PLDtasks> listToUpdate = list.stream()
+                .map(e -> new PLDtasks(e, false, false, ""))
+                .filter(e -> {
+                    List<String> toCompare = repository.findAll().stream()
+                            .map(PLDtasks::getTask)
+                            .toList();
+                    return !toCompare.contains(e.getTask());
+                })
+                .peek(e -> {
+                    String[] params = e.getTask().split("-");
+                    e.setStatus(oracleRepository.getTaskStatus(params[0], params[1]));
+                })
                 .toList();
-        list = list.stream()
-                .filter(e -> !dbListOfTasks.contains(e))
-                .toList();
-        return repository.saveAll(convertStringToPLDTasks(list));
+        return repository.saveAll(listToUpdate);
     }
 
     @Override
@@ -40,9 +54,18 @@ public class PLDtasksMonitoringServiceImpl implements PLDtasksMonitoringService 
         return repository.saveAll(dbList);
     }
 
-    private List<PLDtasks> convertStringToPLDTasks(List<String> list) {
-        return list.stream()
-                .map(e -> new PLDtasks(e, false, false))
-                .collect(Collectors.toList());
+    public String updateTaskStatus(List<String> list) {
+        List<PLDtasks> dbList = repository.findAll();
+        dbList = dbList.stream()
+                .filter(task -> list.contains(task.getTask()))
+                .peek(task -> {
+                    String[] arg = task.getTask().split("-");
+                    task.setStatus(oracleRepository.getTaskStatus(arg[0], arg[1]));
+                })
+                .toList();
+        repository.saveAll(dbList);
+        return "Статусы были обновлены для таких тасок:\n" + dbList.stream()
+                .map(PLDtasks::taskToString)
+                .toList();
     }
 }
